# PaymentCryptoService

./: README.md  admin.dockerfile  backend.dockerfile  celery.dockerfile  crypto.dockerfile  docker-compose.yaml
app/: pyproject.toml  worker_watch.py
app/app/: main.py  main_worker.py
app/app/admin/: app.py  pyproject.toml
app/app/api/: deps.py
app/app/api/v1/: api.py
app/app/api/v1/endpoints/: transactions.py  users.py  wallets.py  webhook.py
app/app/core/: config.py  containers.py
app/app/db/: session.py
app/app/exceptions/: base.py  btc_exceptions.py  erc20_exceptions.py  wallet_exceptions.py
app/app/models/: __init__.py  settings.py  transactions.py  users.py  wallets.py  webhook_erc20.py
app/app/models/types/: decimals_int.py
app/app/repository/: base.py  settings.py  transactions.py  user.py  wallet.py  webhoook_erc20.py
app/app/schemas/: alchemy.py  user.py  wallets.py  webhook.py
app/app/schemas/crypto/: bitcoin_network.py  erc20_network.py
app/app/services/: rate.py  transaction_service.py  wallet.py
app/app/services/crypto/: __init__.py  base.py  btc.py  erc20.py  trc20.py
app/app/utils/: errors_const.py
app/app/workers/: add_address_to_webhook.py  base.py  check_bitcoin_wallets.py  check_transactions.py  check_trc20_wallets.py
app/migrations/: env.py
app/migrations/versions/: 457ef31be081_inital.py  a3382965340a_inital.py
nginx/: nginx.conf
nginx/local/: nginx.conf
