[tool.poetry]
name = "paymentcryptoservice"
version = "0.1.0"
description = "best service"
authors = ["Axel791 <HS.Kazakov@mail.ru>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
alembic = "^1.10.4"
sqlalchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"
aioredis = "^2.0.1"
redis = "^4.5.4"
celery = "^5.2.7"
flask-admin = "^1.6.1"
flask-login = "^0.6.2"
base58 = "^2.1.1"
loguru = "^0.7.0"
httpx = "^0.24.0"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
tronpy = "^0.4.0"
web3 = "^6.3.0"
watchdog = "^3.0.0"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
